fix the overlapping buttons with type buttons on mobile view

--- a/src/app/components/type-button/type-button.component.scss
+++ b/src/app/components/type-button/type-button.component.scss
@@ -48,6 +48,7 @@
   
     &__btn {
       padding: 7.5px 37.5px;
+      margin: 5px;
     }
   }
 }
