--- a/src/app/routes/cards/type/type.component.scss
+++ b/src/app/routes/cards/type/type.component.scss
@@ -12,7 +12,7 @@
 
 .type-outer{
   display: flex;
-  min-height: 90vh;
+  min-height: 80vh;
 }
 
 @media (max-width: 768px) {
